# Spacetraders

./: .gitignore  todo.md  todo.txt
archangel/: pyproject.toml
archangel/archangel/: cli.py  errors.py  executor.py  logger.py  main.py  script_api.py
docs/: api.md
scripts/: format_bar.py  get_contracts.py  get_ship.py  get_waypoints.py  print_ship.py  purchase_ship.py  test_script.py
