[tool.poetry]
name = "archangel"
version = "0.1.0"
description = ""
authors = ["PrivateNomad <privatenomad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
spacetraders = "^0.6.0"
colorama = "^0.4.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
